--- a/Aplikacija/KonacniProjekat/Pages/TuraSve.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraSve.cshtml
@@ -28,6 +28,7 @@ ViewData["Title"]="Ture";
                 <div><a asp-page="./TuraJedna" asp-route-id="@tura.IdTure">Prikazi detalje</a></div>
                 <div><a asp-page="./TuraOceni" asp-route-id="@Model.SessionId" asp-route-tura="@tura.IdTure">Oceni turu</a></div>
                 <div><a asp-page="./TuraIzmeni" asp-route-id="@Model.SessionId" asp-route-tura="@tura.IdTure">Izmeni turu</a></div>
+				<div><a asp-page="./TuraObrisi" asp-route-id="@Model.SessionId" asp-route-tura="@tura.IdTure">Obrisi turu</a></div>
             </div>
         </div>
     </div>
