--- a/Aplikacija/KonacniProjekat/Pages/ZnamenitostSve.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/ZnamenitostSve.cshtml
@@ -8,28 +8,32 @@ ViewData["Title"]="Znamenitosti";
     <h1 class="display-4">Znamenitosti</h1>
 </div>
 
-<div class="text-right">
-    <h3><a asp-page="./ZnamenitostDodaj">Dodaj znamenitost</a></h3>
-</div>
+<nav aria-label="Page navigation">  
+    <ul class="pagination justify-content-end">
+        <li class="page-item"><a class="page-link" asp-page="./ZnamenitostDodaj">Dodaj znamenitost</a></li>
+    </ul>
+</nav>
 
+<div style="overflow-y: scroll;  height: 450px;">
 <div style="display: grid;  grid-template-columns: auto auto auto;">
 @foreach (var znamenitost in Model.SveZnamenitosti) 
 {
-    <div class="flip-card">
-        <div class="flip-card-inner">
-            <div class="flip-card-front">
-                  @if(@znamenitost.Slika!=null)
-      {
-                <img src="images/znamenitosti/@znamenitost.Slika" alt="Avatar" style="width:300px;height:200px; border-radius: 50px 20px;  "> }
+    <div class="flip-card-znamenitosti">
+        <div class="inner-znamenitosti">
+            <div class="front-znamenitosti">
+                @if(@znamenitost.Slika!=null)
+                {
+                    <img src="images/znamenitosti/@znamenitost.Slika" alt="Avatar" style="width:300px;height:200px; border-radius: 50px 20px;  "> 
+                }
             </div>
-            <div class="flip-card-back">
-                <div class="text-center">
-                    <div><h2>@znamenitost.NazivZnamenitosti</h2></div>
+            <div class="back-znamenitosti">
+                    <div class="text-center"><h2>@znamenitost.NazivZnamenitosti</h2></div>
                     <div><a asp-page="./ZnamenitostJedna" asp-route-id="@Model.SessionId" asp-route-znamenitost="@znamenitost.IdZnamenitosti">Vidi znamenitost</a></div>
                     <div><a asp-page="./ZnamenitostIzmeni" asp-route-id="@znamenitost.IdZnamenitosti">Izmeni znamenitost</a></div>
-                </div>
+                    <div><a asp-page="./ZnamenitostObrisi" asp-route-id="@Model.SessionId" asp-route-znamenitost="@znamenitost.IdZnamenitosti">Obrisi znamenitost</a></div>
             </div>
         </div>
     </div>
 }
+</div>
 </div>
