--- a/Aplikacija/KonacniProjekat/Pages/VodicJedan.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/VodicJedan.cshtml
@@ -5,7 +5,7 @@
 
 <form method="get">
 <div class="cardVodic" style="text-align: center ">
-  <img src="images/@Model.TrenutniVodic.Slika" style="width:70%; display: block; margin-left: auto; margin-right: auto;">
+  <img src="images/@Model.TrenutniVodic.Slika" style="width:300px;height:250px; display: block; margin-left: auto; margin-right: auto;">
   <h1>@Model.TrenutniVodic.ImeVodica @Model.TrenutniVodic.PrezimeVodica</h1>
    </br>
   <p class="title"> <img src="https://image.flaticon.com/icons/svg/1/1700.svg" style="width: 20px; height:20px">Licenca: @Model.TrenutniVodic.Licenca</p>
