--- a/Aplikacija/KonacniProjekat/wwwroot/css/site.css
+++ b/Aplikacija/KonacniProjekat/wwwroot/css/site.css
@@ -150,6 +150,7 @@ input[type=text]:placeholder
   margin: 5px;
 }
 
+/*Hall of fame*/
 .halloffame
 {
   background-color: #ffdd9d;
@@ -166,7 +167,22 @@ input[type=text]:placeholder
   display: flex;
   justify-content: space-around;
 }
-.flip-card {
+  .cela-pocetna-stranica * {
+    margin-bottom: 1%;
+    margin-top: 1%;
+  }
+  
+  .carousel-inner * {
+    color: antiquewhite;
+    font-style: oblique;
+    text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+  }
+  
+  .carousel-caption {
+    background-color: rgba(0,0,0,0.39);
+  }
+/*Vodic*/
+.flip-card-vodic {
   background-color: transparent;
   width: 300px;
   height: 200px;
@@ -176,8 +192,7 @@ input[type=text]:placeholder
   margin: 5px;
 }
 
-/* This container is needed to position the front and back side */
-.flip-card-inner {
+.flip-card-inner-vodic {
   position: relative;
   width: 100%;
   height: 100%;
@@ -186,30 +201,16 @@ input[type=text]:placeholder
   transform-style: preserve-3d;
 }
 
-/* Do an horizontal flip when you move the mouse over the flip box container */
-.flip-card:hover .flip-card-inner {
+.flip-card-vodic:hover .flip-card-inner-vodic {
   transform: rotateY(180deg);
 }
 
-/* Position the front and back side */
-.flip-card-front, .flip-card-back {
+.flip-card-front-vodic, .flip-card-back-vodic {
   position: absolute;
   width: 100%;
   height: 100%;
-  -webkit-backface-visibility: hidden; /* Safari */
   backface-visibility: hidden;
   border-radius: 50px 20px;
-}
-.card {
-  /* Add shadows to create the "card" effect */
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  margin: 10px;
-}
-
-/* On mouse-over, add a deeper shadow */
-.card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 
@@ -219,12 +220,10 @@ input[type=text]:placeholder
   width:400px; height:600px; margin: auto;
 }
 
-/* On mouse-over, add a deeper shadow */
 .cardVodic:hover {
   box-shadow: 0 20px 20px 0 rgba(0,0,0,0.5);
 }
 
-/* Add some padding inside the card container */
 .container {
   padding: 2px 16px;
 }
@@ -249,13 +248,13 @@ input[type=text]:placeholder
   opacity: 0.7;
 }
 
-.flip-card-front {
-  background-color: #c2ccff;
+.flip-card-front-vodic {
+  background-color: #1745ff;
   color: black;
 }
 
-.flip-card-back {
-  background-color: #c2ccff;
+.flip-card-back-vodic {
+  background-color: #1745ff;
   color: black;
   transform: rotateY(180deg);
   align-items: center;
@@ -271,21 +270,6 @@ input[type=text]:placeholder
   content: "";
   display: table;
   clear: both;
-}
-
-.cela-pocetna-stranica * {
-  margin-bottom: 1%;
-  margin-top: 1%;
-}
-
-.carousel-inner * {
-  color: antiquewhite;
-  font-style: oblique;
-  text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
-}
-
-.carousel-caption {
-  background-color: rgba(0,0,0,0.39);
 }
 
 /*Forme oko kvizova */
@@ -394,10 +378,10 @@ input[type=text]:placeholder
 }
 
 .flip-card-ture .inner-ture .front-ture {
-  background-color: rgb(222, 222, 222);
+  background-color:  #dd0000;
 }
 .flip-card-ture .inner-ture .back-ture {
-  background-color: rgb(222, 222, 222);
+  background-color:  #dd0000;
   transform: rotateY(180deg);
 }
 
@@ -477,4 +461,14 @@ input[type=text]:placeholder
   width: 100%;
   min-height: 100%;
   padding: 20px;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  margin: 10px;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
