--- a/Aplikacija/KonacniProjekat/Pages/TuraSve.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraSve.cshtml
@@ -7,13 +7,14 @@ ViewData["Title"]="Ture";
 <div class="text-center">
     <h1 class="display-4">Ture</h1>
 </div>
-
+@if(SessionClass.TipKorisnika=="A")
+{
 <nav aria-label="Page navigation">  
     <ul class="pagination justify-content-end">
         <li class="page-item"><a class="page-link" asp-page="./TuraDodaj">Dodaj turu</a></li>
     </ul>
 </nav>
-
+}
 <div style="overflow-y: scroll;  height: 450px;">
 <div style="display: grid;  grid-template-columns: auto auto auto;">
 @foreach (var  tura in Model.SveTure) 
@@ -24,11 +25,17 @@ ViewData["Title"]="Ture";
                  <h1> @tura.NazivTure  </h1> 
             </div>
             <div class="back-ture">
+                @if(SessionClass.TipKorisnika=="T")
+                {
                 <div><a asp-page="./TuraRezervisi" asp-route-id="@Model.SessionId" asp-route-tura="@tura.IdTure">Rezervisi turu</a></div>
-                <div><a asp-page="./TuraJedna" asp-route-id="@tura.IdTure">Prikazi detalje</a></div>
                 <div><a asp-page="./TuraOceni" asp-route-id="@Model.SessionId" asp-route-tura="@tura.IdTure">Oceni turu</a></div>
+                }
+              @if(SessionClass.TipKorisnika=="A")
+              {
                 <div><a asp-page="./TuraIzmeni" asp-route-id="@Model.SessionId" asp-route-tura="@tura.IdTure">Izmeni turu</a></div>
 				<div><a asp-page="./TuraObrisi" asp-route-id="@Model.SessionId" asp-route-tura="@tura.IdTure">Obrisi turu</a></div>
+              }
+              <div><a asp-page="./TuraJedna" asp-route-id="@tura.IdTure">Prikazi detalje</a></div>
             </div>
         </div>
     </div>
