--- a/Aplikacija/KonacniProjekat/Pages/ZnamenitostDodaj.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/ZnamenitostDodaj.cshtml
@@ -7,9 +7,10 @@ ViewData["Title"]="Nova znamenitost";
 <div class="text-center">
     <h2 class="display 4">Nova znamenitost</h2>
 </div>
-
+   @if(SessionClass.TipKorisnika=="A"){
 <form method="post">
     <div class="form-group">
+     
         <label class="form-control">Naziv:</label> <input asp-for="NovaZnamenitost.NazivZnamenitosti" class="form-control" placeholder="Naziv" required />
         <label class="form-control">Lokacija:</label> <input asp-for="NovaZnamenitost.Lokacija" class="form-control" placeholder="Lokacija" required />
         <label class="form-control">Opis:</label> <input asp-for="NovaZnamenitost.Opis" class="form-control" placeholder="Opis" required />
@@ -17,7 +18,11 @@ ViewData["Title"]="Nova znamenitost";
         <label class="form-control">Broj telefona:</label> <input asp-for="NovaZnamenitost.BrojTelefona" class="form-control" placeholder="Broj telefona" />
         <label class="form-control">Cena ulaznice:</label> <input asp-for="NovaZnamenitost.CenaUlaznice" class="form-control" placeholder="Cena ulaznice" />
         <label class="form-control">Dodajte sliku:</label> <input type="file" asp-for="NovaZnamenitost.Slika"  placeholder="Slika" required />
-        </br>
+       
         <button type="submit">Dodaj novu znamenitost</button>
     </div>
 </form>
+}
+ else{
+    <div class="alert alert-danger" role="alert" style="text-align: center;">Nemate pristup ovoj stranici</div> 
+    }
