--- a/Aplikacija/KonacniProjekat/Pages/ZnamenitostIzmeni.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/ZnamenitostIzmeni.cshtml
@@ -7,7 +7,8 @@ ViewData["Title"]="Izmena znamenitosti";
 <div class="text-center">
     <h1 class="display-4">@Model.TrenutnaZnamenitost.NazivZnamenitosti</h1>
 </div>
-
+@if(SessionClass.TipKorisnika=="A")
+{
 <form method="post">
     <div class="form-group">
         <input type="hidden" asp-for="TrenutnaZnamenitost.IdZnamenitosti" />
@@ -20,5 +21,10 @@ ViewData["Title"]="Izmena znamenitosti";
          <label class="form-control">Naslovna slika:</label> <input asp-for="TrenutnaZnamenitost.Slika" class="form-control" />
          <label class="form-control">Dodajte sliku:</label> <input type="file" asp-for="NovaSlika.Slika"  placeholder="Slika" required />
         <button type="submit" asp-page-handler="Sacuvaj">Sacuvaj izmene</button>
+        
     </div>
 </form>
+}
+ else{
+    <div class="alert alert-danger" role="alert" style="text-align: center;">Nemate pristup ovoj stranici</div> 
+}
