--- a/Aplikacija/KonacniProjekat/Pages/TuraObrisi.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraObrisi.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"]="Brisanje ture";
 }
 
+@if(SessionClass.TipKorisnika=="A")
+{
 <div class="brisi-turu fadeInDown">
 <div id="formContent">
 <form method="post">
@@ -21,3 +23,7 @@
 </form>
 </div>
 </div>
+}
+else{
+  <div class="alert alert-danger" role="alert" style="text-align: center;">Nemate pristup ovoj stranici, samo admin može da obrise turu</div> 
+}
