--- a/Aplikacija/KonacniProjekat/Pages/HallOfFame.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/HallOfFame.cshtml
@@ -15,6 +15,7 @@
   <table class="table">
     <thead>
       <tr>
+        <th></th>
         <th>Ime</th>
         <th>Prezime</th>
         <th>Poeni</th>
@@ -27,6 +28,7 @@
   {
     if(ucesnik.IdTuriste==hof.IdTuristeHof)
     {  <tr>
+      <td> <i class="fas fa-trophy"></i></td>
         <td>@ucesnik.ImeTuriste</td>
         <td>@ucesnik.PrezimeTuriste</td>
         <td>@hof.Poeni</td>
@@ -37,3 +39,5 @@
 </tbody>
 </table>
 </div>
+
+<script src='https://kit.fontawesome.com/a076d05399.js'></script>
