--- a/Aplikacija/KonacniProjekat/Pages/Shared/_Layout.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+<link rel="icon" type="image/png" sizes="106x96" href="images/logic.png">
 </head>
 <body>
     <header>
@@ -15,7 +16,7 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                 <img src="images/Logo.png" style="height:50px"class="img-fluid">
+                 <img src="images/logic.png" style="height:70px"class="img-fluid">
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class=" nav navbar-right navbar-nav">
                         <li class="nav-item">
