--- a/Aplikacija/KonacniProjekat/Pages/TuraIzmeni.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraIzmeni.cshtml
@@ -7,7 +7,8 @@
 <div class="text-center">
     <h2 class="display-4">Izmena ture: @Model.OvaTura.NazivTure</h2>
 </div>
-
+@if(SessionClass.TipKorisnika=="A")
+{
 <form method="post">
     <input type="hidden" asp-for="SessionId" />
     <input type="hidden" asp-for="TuraId" />
@@ -53,3 +54,7 @@
     </div>                                              
                                                         
 </form>
+}
+else{
+  <div class="alert alert-danger" role="alert" style="text-align: center;">Nemate pristup ovoj stranici, samo admin može da izmeni turu</div> 
+}
