--- a/Aplikacija/KonacniProjekat/Pages/VodicSviNalozi.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/VodicSviNalozi.cshtml
@@ -25,7 +25,7 @@ else{
     <p>Broj telefona: @vodic.BrojTelefona</p>
     <p>Email: @vodic.Email</p>
     <p>Ocena: @vodic.Ocena</p>
-    <button type="submit" asp-route-id="@vodic.IdVodica" asp-page-handler="Obrisi" style="position: absolute;left: 0; right: 0">Obrisi vodica <i class='fas fa-user-alt-slash'></i></button> 
+    <button type="submit" asp-route-id="@vodic.IdVodica" asp-page-handler="Obrisi">Obrisi vodica <i class='fas fa-user-alt-slash'></i></button> 
   </div>
 </div>
 }
