--- a/Aplikacija/KonacniProjekat/Pages/HallOfFame.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/HallOfFame.cshtml
@@ -12,7 +12,7 @@
       }
 </ul>
 <div style="overflow-y: scroll;  height: 300px;">
-  <table class="table">
+  <table class="table hof">
     <thead>
       <tr>
         <th></th>
