--- a/Aplikacija/KonacniProjekat/Pages/Registracija.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/Registracija.cshtml
@@ -13,7 +13,7 @@
           <input type="text" asp-for="NoviTurista.Email" placeholder="Email" required />
          <input type="text" asp-for="NoviKorisnik.Username" placeholder="Korisnicko ime" required />
           <input type="text"  asp-for="NoviKorisnik.Password" placeholder="Lozinka" required />
-         <button type="submit">Registruj se</button>
+         <input type="submit" value="Registruj se"/>
      </form> 
      </div>
 </div>
