--- a/Aplikacija/KonacniProjekat/Pages/Shared/_Layout.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/Shared/_Layout.cshtml
@@ -16,7 +16,10 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                 <img src="images/logic.png" style="height:70px"class="img-fluid">
+                 <a  asp-area="" asp-page="/Index">
+                                  <img src="images/logic.png" style="height:70px"class="img-fluid">
+
+                 </a>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class=" nav navbar-right navbar-nav">
                         <li class="nav-item">
