--- a/Aplikacija/KonacniProjekat/Pages/Registracija.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/Registracija.cshtml
@@ -3,7 +3,7 @@
 @{
 }
 
-<div class="registracija fadeInDown">
+<div class="registracija">
 <div id="formContent">
 <form method="post">
             <input type="text" asp-for="NoviTurista.ImeTuriste" placeholder="Ime" required />
