--- a/Aplikacija/KonacniProjekat/Pages/Shared/_Layout.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/Shared/_Layout.cshtml
@@ -10,7 +10,8 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3" style="
+  background:-color #e6e6e6;  background-image: linear-gradient(315deg,  #e6e6e6 0%,#F8F8FF 50%);"> 
             <div class="container">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
