--- a/Aplikacija/KonacniProjekat/Pages/TuraObrisi.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraObrisi.cshtml
@@ -6,7 +6,7 @@
 
 @if(SessionClass.TipKorisnika=="A")
 {
-<div class="brisi-turu fadeInDown">
+<div class="brisi-ture fadeInDown">
 <div id="formContent">
 <form method="post">
 
