--- a/Aplikacija/KonacniProjekat/Pages/TuraJedna.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraJedna.cshtml
@@ -2,6 +2,7 @@
 @model KonacniProjekat.TuraJednaModel
 @{
 }
+
 <div class=text-center>
     <h1 class="display-4">@Model.Ture.NazivTure</h1>
 </div>
@@ -15,24 +16,34 @@
 <div class="row">
   <div class="col-md-5">
     <form method="get">
+
       <div><h4>Naziv:</h4> @Model.Ture.NazivTure</div>
       <div><h4>Dan održavanja:</h4> @Model.Ture.DanOdrzavanja</div>
       <div><h4>Vreme održavanja:</h4> @Model.Ture.VremeOdrzavanja</div>
       <div><h4>Mesto polaska:</h4> @Model.Ture.MestoPolaska</div>
       <div><h4>Kapacitet:</h4> @Model.Ture.Kapacitet</div>
       <div><h4>Opis:</h4> @Model.Ture.Opis</div>
-      <div><h4>Tip ture:</h4> @Model.Ture.TipTure</div>
+      <div>
+        <h4>Vodic:</h4> 
+        <a asp-page="./VodicJedan" asp-route-id="@Model.VodicTure.IdVodica"> @Model.VodicTure.ImeVodica</a>
+      </div>
+      <div>
+        <h4>Znamenitosti:</h4> 
+      </div>
+
     </form>
   </div>
   <div class="col-md-7">
-    <img class="img-fluid rounded mb-5 mb-md-0" src="http://placehold.it/700x300" alt="">
+    <img class="img-fluid rounded mb-5 mb-md-0" src="http://placehold.it/700x300" alt=""> 
     <form method="get">
-      <div><h4>Organizovanost ture: </h4></div>
-      <div><h4>Fizička zahtevnost:</h4></div>
-      <div><h4>Društvena atmosfera:</h4></div>
-      <div><h4>Najzanimljivija znamenitost:</h4></div>
-      <div><h4>Najmanje zanimljiva znamenitost:</h4></div>
-      <div><h4>Srednja ocena ture:</h4></div>
+      <div><h4>Organizovanost ture: </h4>@Model.RezultatiAnkete.OrganizovanostTure</div>
+      <div><h4>Fizička zahtevnost:</h4>@Model.RezultatiAnkete.FizickaZahtevnostTure</div>
+      <div><h4>Društvena atmosfera:</h4>@Model.RezultatiAnkete.DrustvenaAtmosfera</div>
+      <div><h4>Najzanimljivija znamenitost:</h4>@Model.RezultatiAnkete.NajinteresantnijaZnamenitost</div>
+      <div><h4>Najmanje zanimljiva znamenitost:</h4>@Model.RezultatiAnkete.NajdosadnijaZnamenitost</div>
+      <div><h4>Srednja ocena ture:</h4>@Model.RezultatiAnkete.KonacnaOcena</div>
     </form>
   </div>
 </div>
+
+
