--- a/Aplikacija/KonacniProjekat/Pages/TuraJedna.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraJedna.cshtml
@@ -28,17 +28,19 @@
         <a asp-page="./VodicJedan" asp-route-id="@Model.VodicTure.IdVodica"> @Model.VodicTure.ImeVodica @Model.VodicTure.PrezimeVodica</a>
       </div>
       <div>
-        <h4>Znamenitosti:</h4> 
+        <h4>Znamenitosti:</h4>
+        <div  style="width: 1300px; height:450px; overflow-x: auto; white-space: nowrap; ">
         @foreach (var znamenitosti in Model.ZnamenitostiUTuri)
         {
-            <a asp-page="./ZnamenitostJedna" asp-route-id="@Model.SessionId" asp-route-znamenitost="@znamenitosti.IdZnamenitosti"> @znamenitosti.NazivZnamenitosti</a>
+          <a asp-page="./ZnamenitostJedna" asp-route-id="@Model.SessionId" asp-route-znamenitost="@znamenitosti.IdZnamenitosti">   
+            <img class="img-fluid rounded mb-7 mb-md-0" src="images/znamenitosti/@znamenitosti.Slika" alt="" style="width:650px;height:400px;">
+          </a>  
         }
+        </div>
       </div>
-
     </form>
   </div>
   <div class="col-md-7">
-    @* <img class="img-fluid rounded mb-5 mb-md-0" src="http://placehold.it/700x300" alt="">  *@
     <form method="get">
       <div><h4>Organizovanost ture: </h4>@Model.RezultatiAnkete.OrganizovanostTure</div>
       <div><h4>Fizička zahtevnost:</h4>@Model.RezultatiAnkete.FizickaZahtevnostTure</div>
@@ -47,9 +49,6 @@
       <div><h4>Najmanje zanimljiva znamenitost:</h4>@Model.RezultatiAnkete.NajdosadnijaZnamenitost</div>
       <div><h4>Srednja ocena ture:</h4>@Model.RezultatiAnkete.KonacnaOcena</div>
     </form>
-  </div>
-  <div div class="col-md-5" style="overflow-x: scroll; width:800px;">
-  <img class="img-fluid rounded mb-7 mb-md-0" src="http://placehold.it/700x300" alt=""> 
   </div>
 </div>
 
