--- a/Aplikacija/KonacniProjekat/Pages/Shared/_Layout.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/Shared/_Layout.cshtml
@@ -6,25 +6,25 @@
     <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
-<link rel="shortcut icon" type="image/png" href="images/logic.png">
+<link rel="icon" type="image/png" href="images/logic.png">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3" style="
-  background:-color #e6e6e6;  background-image: linear-gradient(315deg,  #e6e6e6 0%,#F8F8FF 50%);"> 
+  background:-color #d6eaff   ;  background-image: linear-gradient(315deg,  #d6eaff    0%,#f8fbff  50%);"> 
             <div class="container">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                  <a  asp-area="" asp-page="/Index">
-                                  <img src="images/logic.png" style="height:70px"class="img-fluid">
+                                  <img src="images/logic.png" style="height:90px"class="img-fluid">
 
                  </a>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class=" nav navbar-right navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">O Nama</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/ONama">O Nama</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Kontakt</a>
