--- a/Aplikacija/KonacniProjekat/Pages/Prijava.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/Prijava.cshtml
@@ -10,6 +10,9 @@
       <input type="text"  placeholder="Korisnicko ime" asp-for="TrenutniKorisnik.Username">
       <input type="password"  placeholder="Lozinka" asp-for="TrenutniKorisnik.Password">
       <input type="submit" value="Prijavi se"/>
+      <div class="d-flex justify-content-center links">
+				Nemaš nalog?<a href="/Registracija">Registruj se</a>
+				</div>
     </div>
   </div>
 </form>
