--- a/Aplikacija/KonacniProjekat/Pages/Registracija.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/Registracija.cshtml
@@ -13,7 +13,10 @@
           <input type="text" asp-for="NoviTurista.Email" placeholder="Email" required />
          <input type="text" asp-for="NoviKorisnik.Username" placeholder="Korisnicko ime" required />
           <input type="text"  asp-for="NoviKorisnik.Password" placeholder="Lozinka" required />
-         <input type="submit" value="Registruj se"/>
+        <div><input type="submit" value="Registruj se"/> </div>
+       	<div class="d-flex justify-content-center links">
+				Imas nalog?<a href="/Prijava">Prijavi se</a>
+				</div>
      </form> 
      </div>
 </div>
