--- a/Aplikacija/KonacniProjekat/Pages/ONama.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/ONama.cshtml
@@ -38,52 +38,6 @@
                             <div class="timeline-body"><p class="text-muted">Naša vizija je da Niš postane poželjno turističko odredište na turističkoj mapi Evrope, mesto koje se rado i uvek iznova posećuje!</p></div>
                         </div>
                     </li>
-                     <li class="timeline-inverted">
-                        <div class="timeline-image">
-                            <h3>
-                                <br/>
-                                Članovi
-                                <br />
-                                tima
-                            </h3>
-                        </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image"></div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4 class="subheading">Aleksandra Jovanović</h4>
-                            </div>
-                     
-                        </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image"></div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4 class="subheading">Sara Jovanović</h4>
-                            </div>
-                     
-                        </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image"></div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4 class="subheading">Valentina Jošanović</h4>
-                            </div>
-                     
-                        </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image"></div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4 class="subheading">Aleksa Krstić</h4>
-                            </div>
-                     
-                        </div>
-                    </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image">
                             <h4>
@@ -99,3 +53,83 @@
                 </ul>
             </div>
         </section>
+
+    <section class="testimonials text-center">
+    <div>
+      <h2 class="mb-5">Članovi tima koji su realizovali ovaj projekat</h2>
+      <div class="row">
+        <div class="col-lg-3">
+          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="images/AJ.png" alt="">
+            <h5>Aleksandra Jovanović</h5>
+            <ul class="list-inline mb-0">
+            <li class="list-inline-item mr-2">
+              <a href="https://www.facebook.com/aleksija16/">
+                <i class="fab fa-facebook fa-2x fa-fw"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.instagram.com/aleksandraj16/">
+                <i class="fab fa-instagram fa-2x fa-fw"></i>
+              </a>
+            </li>
+          </ul>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="images/SJ.png" alt="">
+            <h5>Sara Jovanović</h5>
+             <ul class="list-inline mb-0">
+            <li class="list-inline-item mr-2">
+              <a href="https://www.facebook.com/sara6.jovanovic">
+                <i class="fab fa-facebook fa-2x fa-fw"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">
+                <i class="fab fa-instagram fa-2x fa-fw"></i>
+              </a>
+            </li>
+          </ul>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="images/VJ.png" alt="">
+            <h5>Valentina Jošanović</h5>
+             <ul class="list-inline mb-0">
+            <li class="list-inline-item mr-2">
+              <a href="https://www.facebook.com/valentina.josanovic">
+                <i class="fab fa-facebook fa-2x fa-fw"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.instagram.com/vanjajosanovic__/">
+                <i class="fab fa-instagram fa-2x fa-fw"></i>
+              </a>
+            </li>
+          </ul>
+          </div>
+        </div>
+         <div class="col-lg-3">
+          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="images/AK.png" alt="">
+            <h5>Aleksa Krstić</h5>
+             <ul class="list-inline mb-0">
+            <li class="list-inline-item mr-2">
+              <a href="https://www.facebook.com/YouShallNotPass">
+                <i class="fab fa-facebook fa-2x fa-fw"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.instagram.com/aleksa420/">
+                <i class="fab fa-instagram fa-2x fa-fw"></i>
+              </a>
+            </li>
+          </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
