--- a/Aplikacija/KonacniProjekat/wwwroot/css/site.css
+++ b/Aplikacija/KonacniProjekat/wwwroot/css/site.css
@@ -599,3 +599,19 @@ background-image: linear-gradient(315deg, #eaf4ff   0%, #84c1ff  79%);
     padding: 0 30px 20px 20px;
     text-align: left;
   }
+
+  .testimonials {
+    padding-top: 7rem;
+    padding-bottom: 7rem;
+    
+  }
+  
+  .testimonials .testimonial-item {
+    max-width: 18rem;
+  }
+  
+  .testimonials .testimonial-item img {
+    max-width: 12rem;
+    box-shadow: 0px 5px 5px 0px #70b8ff;
+  }
+  
